fix(steak-use-case): background size on mobile

--- a/src/app/usecase-steak/usecase-steak.module.scss
+++ b/src/app/usecase-steak/usecase-steak.module.scss
@@ -9,12 +9,13 @@
     background-position: center;
     position: relative;
     height: 100vh;
+    min-height: 700px;
     grid-column: col-start / span 12;
 }
 
 .phoneMockup {
     position: absolute;
-    top: 180px;
+    top: calc(50% - 250px);
     left: 25%;
     img {
         width: 300px;
@@ -25,10 +26,9 @@
 @media (max-width: 900px) {
     .container {
         grid-column: col-start / span 3;
-        background-size: cover;
+        background-size: auto 100%;
     }
     .phoneMockup {
-        top: 25%;
         width: 100%;
         left: 0;
         text-align: center;
